release/v1.5.0/README.md
# reCamera Pro v1.5.0 — 一键部署包 (application layer)

> **历史归档，禁止用于当前固件部署。** 本目录早于
> `inference-control@1`，所引用的 sideload 固件也与当前源码/manifest 不构成
> 一致发布集。不要运行 `deploy-firmware.sh`；应用层脚本只对已经安装对应旧
> endpoint 固件的历史设备有参考意义。

把本轮全部应用层改动一次性部署到设备，让设备达到 v1.5.0 完整状态。
**固件层（rkipc 遮罩固件）单独、高危、默认不在一键流程内** —— 见文末。

**本版固件产物与 v1.3.0 / v1.4.0 相同**（`rkipc` `9826e9ec…`、`entry.cgi` `75a693c8…`、
`librecamera_ext.so.1.0.0` `5cebfb9e…` 均未变），`recamera-ext-api-v1.5.0.tar` 只是版本号与内附
`MANIFEST.txt`/`README.md` 的文本变化。已装 v1.3.0 或 v1.4.0 固件的设备**无需重装固件**，
跑 `deploy-app.sh` 即可。

## 与 v1.4.0 的产物差异

本版五个部署包全部从 HEAD 重建，与 v1.4.0 逐字节比对结果：

| 产物 | 与 v1.4.0 | 说明 |
|------|-----------|------|
| `apps-v1.5.0.tar.gz` | **相同**（md5 `01033bf8…`） | 9 个 app 的 `manifest.json`/`app.py` 本轮未改 |
| `appmgr-v1.5.0.tar.gz` | 不同 | 新增文件型运行时、env 注入、`LD_LIBRARY_PATH` 修复（见下） |
| `frontend-v1.5.0.tar.gz` | 不同 | 按需运行时提示改为按能力通用（bundle `main.913b60c6.js`） |
| `recamera-ext-kit-v1.5.0.tar.gz` | 不同，但**仅一个文档文件** | 唯一内容差异是 `examples/10-video-backends/README.md`（补 GStreamer/OpenCV 补救路径）；`kit/**`、`sdk/**`、`wheels/**` 逐字节相同。tar 顶层目录名由 `recamera-ext-kit-v1.4.0/` 变为 `recamera-ext-kit-v1.5.0/` |
| `recamera-ext-api-v1.5.0.tar` | 不同，但**固件二进制相同** | 仅内附 `MANIFEST.txt`/`README.md` 版本号文本变化 |
| `voice-runtime-1.0.0.tar.gz` | **相同**（md5 `ace48a68…`） | 音频运行时未改 |
| `gst-hwcodec-1.0.0.tar.gz` | **新增** | v1.4.0 无此产物 |

9 个应用商店包（`packages/`）与 v1.4.0 **逐字节相同**，本版重建后 md5 全部一致；签名为本轮重签。

## 相对 v1.4.0 的变化

- **文件型按需运行时** —— 运行时注册表引入 `kind` 字段。`audio`（`kind:"pip"`）走
  离线 wheel 安装进 `/userdata/rknnenv`；新增 `hwcodec`（`kind:"files"`）改为**解包到
  `/userdata/lib`**，不进 venv。就位判定按文件存在性而非 pip 元数据，重复安装幂等。
  解包路径做了穿越校验，成员不得逃出目标目录。
- **GStreamer RK 硬编解码运行时** —— 新增 `gst-hwcodec-1.0.0.tar.gz`（425 KB，3 个 `.so`），
  由 `catalog.json` 的 `runtimes.hwcodec` 描述，只有 manifest 声明对应 capability 的应用才会触发下载。
  **硬件解码（`mppvideodec`）已在真机验证**；**编码器 `mpph264enc` / `mpph265enc` 随包分发但未做验证，
  不要按可用对待。**
- **按 capability 注入运行时环境变量** —— appmgr supervisor 抽出 `_build_env`，
  新增 `merge_env` / `apply_runtime_env`：应用启动时，按 manifest 的 `capabilities` 找到
  已就位的运行时，把它声明的环境变量（如 `GST_PLUGIN_PATH` / `LD_LIBRARY_PATH` 追加段）合进子进程环境。
  应用侧零代码。
- **`LD_LIBRARY_PATH` 空段修复** —— 传给 app 的 `LD_LIBRARY_PATH` 里若出现空段（`::` 或首尾 `:`），
  动态链接器会把它当作当前工作目录，从 app 目录里加载同名 `.so`。现在拼接后统一清理空段。
- **前端运行时提示泛化** —— 应用商店的"需要额外运行时"提示原先只认 `audio`，
  现改为按 catalog 的 `runtimes` 与应用 `capabilities` 求交集，新增能力无需改前端。

## 目录内容

| 文件 | 内容 | 部署目标 |
|------|------|----------|
| `recamera-ext-kit-v1.5.0.tar.gz` | kit 运行时（含 `kit/run.py`、`kit/events.py`）+ SDK(python/lib/头文件) + 离线推理 wheels（含 rknnlite / jinja2 / markupsafe），自带 `INSTALL.sh` | `/userdata/local/kit`、`/userdata/sdk`、`/userdata/rknnenv` |
| `appmgr-v1.5.0.tar.gz` | App Center 管理器全部代码（builtin/config/server/assets/supervisor/voiceruntime…）**含签名公钥 `keys/`**；已排除 `__pycache__`/`tests`/`*.bak*` | `/userdata/local/appmgr` |
| `frontend-v1.5.0.tar.gz` | React 前端构建产物（bundle `main.913b60c6.js`） | `/oem/usr/www` |
| `apps-v1.5.0.tar.gz` | 9 个 app 的 `manifest.json` + `app.py`（+ 小配置）。**不含大模型 `*.rknn`/`*.onnx`** | `/userdata/local/apps` |
| `voice-runtime-1.0.0.tar.gz` | 按需音频运行时（`runtimes.audio`，`kind:"pip"`），仅音频应用需要 | 由 appmgr 按需拉取安装 |
| `gst-hwcodec-1.0.0.tar.gz` | 按需硬编解码运行时（`runtimes.hwcodec`，`kind:"files"`），解包到 `/userdata/lib` | 由 appmgr 按需拉取安装 |
| `recamera-ext-api-v1.5.0.tar` | 遮罩固件（rkipc + entry.cgi + 扩展 `.so` + SDK + wheels），自带 `install.sh`/`rollback.sh`。**固件产物同 v1.3.0/v1.4.0** | `/oem`（**高危，冷启动**） |
| `deploy-app.sh` | 应用层一键部署主脚本（安全） | — |
| `deploy-firmware.sh` | 遮罩固件部署脚本（**高危，单独跑**） | — |

包的 md5 / size 在文末「校验」一节列出。

## 从 CDN 下载

全部产物发布在 SenseCraft CDN，前缀
`https://sensecraft-statics.seeed.cc/solution-app/recamera_pro/release/v1.5.0/`：

| 文件 | URL |
|------|-----|
| `recamera-ext-kit-v1.5.0.tar.gz` | https://sensecraft-statics.seeed.cc/solution-app/recamera_pro/release/v1.5.0/recamera-ext-kit-v1.5.0.tar.gz |
| `recamera-ext-api-v1.5.0.tar` | https://sensecraft-statics.seeed.cc/solution-app/recamera_pro/release/v1.5.0/recamera-ext-api-v1.5.0.tar |
| `appmgr-v1.5.0.tar.gz` | https://sensecraft-statics.seeed.cc/solution-app/recamera_pro/release/v1.5.0/appmgr-v1.5.0.tar.gz |
| `frontend-v1.5.0.tar.gz` | https://sensecraft-statics.seeed.cc/solution-app/recamera_pro/release/v1.5.0/frontend-v1.5.0.tar.gz |
| `apps-v1.5.0.tar.gz` | https://sensecraft-statics.seeed.cc/solution-app/recamera_pro/release/v1.5.0/apps-v1.5.0.tar.gz |
| `voice-runtime-1.0.0.tar.gz` | https://sensecraft-statics.seeed.cc/solution-app/recamera_pro/release/v1.5.0/voice-runtime-1.0.0.tar.gz |
| `gst-hwcodec-1.0.0.tar.gz` | https://sensecraft-statics.seeed.cc/solution-app/recamera_pro/release/v1.5.0/gst-hwcodec-1.0.0.tar.gz |
| `deploy-app.sh` | https://sensecraft-statics.seeed.cc/solution-app/recamera_pro/release/v1.5.0/deploy-app.sh |
| `deploy-firmware.sh` | https://sensecraft-statics.seeed.cc/solution-app/recamera_pro/release/v1.5.0/deploy-firmware.sh |
| `README.md` | https://sensecraft-statics.seeed.cc/solution-app/recamera_pro/release/v1.5.0/README.md |

应用商店走另一条路径：`catalog.json` 在
`https://sensecraft-statics.seeed.cc/solution-app/recamera_pro/catalog.json`，
应用包与两个按需运行时在
`https://sensecraft-statics.seeed.cc/solution-app/recamera_pro/packages/`。

```bash
# 拉全套到本地 deploy 目录，赋可执行权限后跑 deploy-app.sh
BASE=https://sensecraft-statics.seeed.cc/solution-app/recamera_pro/release/v1.5.0
mkdir -p deploy && cd deploy
for f in recamera-ext-kit-v1.5.0.tar.gz recamera-ext-api-v1.5.0.tar \
         appmgr-v1.5.0.tar.gz frontend-v1.5.0.tar.gz apps-v1.5.0.tar.gz \
         voice-runtime-1.0.0.tar.gz gst-hwcodec-1.0.0.tar.gz \
         deploy-app.sh deploy-firmware.sh README.md; do
  curl -fSL "$BASE/$f" -o "$f"
done
chmod +x deploy-app.sh deploy-firmware.sh
# 下载后按文末「校验」表核对 md5
```

## 前提

- **设备**：reCamera Pro（RV1126B），已开机、网络可达（IP 易变，先确认当前地址）。
- **控制机（Mac）**：装了 `adb`。root 操作走 **adb**（设备 `adbd` 以 root 运行，`<ip>:5555`），无需 SSH 密码，无需 `sudo`/包管理器。
- **磁盘**：`/userdata` 需 ~200 MB 余量（含备份）；若装音频应用另需 ~200 MB（模型 + 运行时）。
- 幂等：脚本可重复跑；每次替换目录前按时间戳备份到 `/userdata/_deploy/backups/`。

## 一键部署（应用层，推荐）

```bash
./deploy-app.sh                       # 默认 host 192.168.42.1
./deploy-app.sh --host 192.168.10.x   # 指定设备 IP
./deploy-app.sh --skip-kit            # kit 已装，只更 appmgr/前端/apps
./deploy-app.sh --no-activate         # 不启动 app、不碰摄像头
```

> 从 **v1.4.0** 升级可以用 `--skip-kit`：本版 kit 与 v1.4.0 的唯一差异是一个 example 文档文件。
> 从 **v1.3.0** 升级**不要用** `--skip-kit`：v1.3.0 的 kit 包缺 `kit/run.py`/`kit/events.py`，
> 跳过 kit 会让 9 个 app 全部起不来。

### 部署顺序（脚本内部，每步幂等 + dmesg 查 vpss）

1. **kit + SDK + wheels** —— push kit 包，跑其 `INSTALL.sh`：装 kit 到 `/userdata/local/kit`，SDK 到 `/userdata/sdk`，离线 wheels 到 venv `/userdata/rknnenv`。旧副本按时间戳备份。
2. **appmgr** —— 备份旧 `/userdata/local/appmgr`，merge-extract 新代码（覆盖 `.py` + `keys/`，保留运行态 `audit.log`/`mqtt.json`/锁）；**setsid 重启 `python3 -m appmgr serve`**，起来后从 `/proc` 回读真实 pid 写 pidfile，验证 `127.0.0.1:8130` 存活。
   - 停旧进程用 `/proc` cmdline 扫描 + pidfile，**不用 `pkill -f`**（会匹配到重启命令本身、误杀自己的 shell）。
3. **前端** —— 备份 `/oem/usr/www`；`static/` 整目录替换（清掉旧 hash bundle），顶层 html/json/png/svg 覆盖；**目录 chmod 755 / 文件 644**，**不碰 `cgi-bin`、不碰 `sdcard/usb0/userdata` 软链**。
4. **apps** —— 备份 `state.json`，merge-extract 9 个 app 的代码+manifest，**保留设备上已有的大模型文件**。
5. **激活 + 校验** —— 调 `POST /api/appMgr/switch` 激活一个 app（默认 `retail-vision`），跑 `ws_probe.py` 确认 `:8124` 结果流出帧；查 dmesg 无 vpss。

### 安全护栏（脚本内置）

- **绝不碰 rkipc**：部署前后各取一次 `/oem/usr/bin/rkipc` md5，收尾断言未变，变了直接 FATAL。
- 每个碰摄像头的步骤后查 `dmesg`；出现 `vpss err` / `CSIBDG fifo overflow` / `Oops` / `Unable to handle kernel` 立即 STOP。
- 大文件 push 用 **md5 校验 + 重试**（adb over Tailscale 大包偶发 `EOF`，按 md5 判定成功）。

## 按需运行时

两个运行时都不进 kit 包，由应用商店在安装声明了对应 capability 的应用时按需拉取：

| 运行时 | catalog key | kind | 落点 | 触发条件 |
|--------|-------------|------|------|----------|
| 音频（sherpa-onnx / voxedge 等 5 个 aarch64 wheel，18 MB） | `runtimes.audio` | `pip` | `/userdata/rknnenv` | 应用 `capabilities` 含 `audio`（本版为 `voice-transcribe`） |
| GStreamer RK 硬编解码（3 个 `.so`，0.4 MB） | `runtimes.hwcodec` | `files` | `/userdata/lib` | 应用 `capabilities` 含 `hwcodec` |

手工触发（两者接口相同，`name` 不同）：

```bash
curl -X POST http://127.0.0.1:8130/api/appMgr/runtime \
  -H 'Content-Type: application/json' \
  -d '{"name":"hwcodec","path":"/userdata/appstage/gst-hwcodec-1.0.0.tar.gz"}'
curl 'http://127.0.0.1:8130/api/appMgr/runtime?name=hwcodec'   # present:true 才算装好
```

> **硬编解码的验证边界**：`mppvideodec`（硬件解码）已在真机跑通。
> `mpph264enc` / `mpph265enc`（硬件编码）包含在同一批 `.so` 里随包分发，**未做验证**，
> 不要在此基础上排期编码相关功能。

> **不要为了装音频运行时去升级 numpy。** `/userdata/rknnenv` 是共享 venv，9 个视觉 app 靠里面的
> `rknn-toolkit-lite2 2.3.2`，设备上 numpy 是 1.23.5。离线安装走 `--no-deps`，
> 判定成败的是安装后在目标解释器里 `import voxedge, sherpa_onnx` 是否通过。

## 固件层部署（遮罩固件，高危，单独跑）

> ⚠️ **换 rkipc 必须冷启动（整机 `reboot`）激活。热替换会触发 `cv181x_vpss` / CSIBDG FIFO 内核 oops，可能把设备搞挂。远程执行有风险 —— 只在你能物理复位设备时才跑。**

**本版固件产物与 v1.3.0 / v1.4.0 逐字节相同**（见 `MANIFEST.txt` 的 `rkipc` / `entry.cgi` md5）。
设备若已装 v1.3.0 或 v1.4.0 固件，本步可跳过。

`deploy-app.sh` 不依赖遮罩固件也能把 apps/前端/appmgr 跑起来。仅当需要软件叠加 OSD / 结果注入等扩展 API 能力时才装固件。

```bash
./deploy-firmware.sh --host <ip>              # 安装：md5 校验→备份原厂 rkipc→装入 /oem→停在 reboot 前
./deploy-firmware.sh --host <ip> --reboot     # 装完立即重启
./deploy-firmware.sh --host <ip> --rollback   # 回滚到原厂 rkipc（用 /userdata/rkipc.factory.bak）
```

脚本会要求输入 `I-HAVE-PHYSICAL-ACCESS` 确认。

## 回滚

- **应用层**：每次跑 `deploy-app.sh` 都会在 `/userdata/_deploy/backups/` 留时间戳备份
  （`appmgr.<ts>/`、`www.<ts>.tar.gz`、`state.json.<ts>`）；kit/SDK 旧副本在
  `/userdata/local/kit.bak.<ts>`、`/userdata/sdk/*.bak.<ts>`。手动 `cp -a` / 解 tar 回去即可。
- **版本回退**：`release/v1.4.0/` 与 `release/v1.3.0/` 两条路径在 CDN 上原样保留。
- **固件层**：`./deploy-firmware.sh --host <ip> --rollback`（内部跑包里的 `rollback.sh`，恢复原厂 rkipc 后需冷启动）。

## 重新打包（可选，确定性）

`appmgr` / `frontend` / `apps` 三个包由 `build-packages.py` 确定性生成（tar 元数据归零 + gzip mtime=0，同输入→同 md5）：

```bash
python3 build-packages.py --frontend /path/to/recamera_web_react/build
```

在 macOS 上打包前端要 `COPYFILE_DISABLE=1` 解包源目录，否则 `._*` AppleDouble 文件会混进 `/oem/usr/www`。

`recamera-ext-kit` / `recamera-ext-api` 由 `release/build-release.sh` 单独产出；
`gst-hwcodec` 由 `release/build-gst-hwcodec.sh` 产出。

## 校验（本轮产物 md5 / size）

本表是本版所有产物校验值的**唯一权威来源**。

> ### ⚠️ 原地更新记录
>
> **2026-08-15:`deploy-app.sh` 在 v1.5.0 发布后被原地替换过一次。**
>
> | | size | md5 |
> |---|---:|---|
> | 初版(已作废) | 12761 | `924626c55fee005b7cd18ed054a25a8b` |
> | **当前** | 16636 | `13acde357be974bfc29d8b24faaf18c3` |
>
> 改动:前端部署由"推 36 MB 整包 + 整目录替换"改为**按文件 md5 比对、只推变化的文件**。
> 前端包里 34 MB 是三个思源黑体 woff2、从不变化,每次重传纯属浪费。真机实测:
> 同步态由 **503s / 36 MB** 降到 **13s / 0 字节**;只改了 JS 时推 1.7 MB / 42s。
>
> 行为未变:备份、权限(目录 755 / 文件 644)、rkipc md5 前后断言、dmesg 检查
> 全部保留。删除严格限定在 `static/` 子树内,`cgi-bin` 与 `sdcard`/`usb0`/`userdata`
> 三个软链显式排除,且待删数超过新包文件数时中止。
>
> **如果你在 2026-08-15 之前下载过 `deploy-app.sh`,手里是初版。** 它功能正常、
> 只是每次多传 34 MB;要用新版重新下载即可,两版可互换,不影响设备状态。
>
> 其余产物未变动。

### release/v1.5.0/

| 包 | size (bytes) | md5 | 与 v1.4.0 |
|----|-------------:|-----|-----------|
| `recamera-ext-api-v1.5.0.tar` | 18626560 | `49879807e6ec2bf1048b58b2db15b094` | 不同（仅版本文本） |
| `recamera-ext-kit-v1.5.0.tar.gz` | 2200366 | `2f10e72f1c79629b3645817a4980960c` | 不同（仅一个 example README + 顶层目录名） |
| `appmgr-v1.5.0.tar.gz` | 57684 | `ab0eaa5f35a978c5506759b9325d44a0` | 不同 |
| `frontend-v1.5.0.tar.gz` | 36755573 | `ebc99bedecad6e0432fdaccd5ab72238` | 不同 |
| `apps-v1.5.0.tar.gz` | 986014 | `01033bf889ae2613c858a138e955507a` | **相同** |
| `voice-runtime-1.0.0.tar.gz` | 18856604 | `ace48a688d41a3fc6b852a0f14ddad8d` | **相同** |
| `gst-hwcodec-1.0.0.tar.gz` | 425137 | `8e6d286fac58a5b366e8fdd1709b212f` | 新增 |
| `deploy-app.sh` | 16636 | `13acde357be974bfc29d8b24faaf18c3` | 不同（版本号 + 前端按文件去重，见下方「原地更新」） |
| `deploy-firmware.sh` | 4945 | `82396b0f8cbf6094429bcdacefdb1631` | 不同（仅版本号） |

`recamera-ext-api-v1.5.0.tar` 的 tar md5 与 v1.4.0 不同，因为内附 `MANIFEST.txt` / `README.md`
的版本号文本变了；**tar 内的固件产物本身未变**：

| 固件产物 | size (bytes) | md5 | 与 v1.3.0 / v1.4.0 |
|----------|-------------:|-----|--------------------|
| `rkipc` | 15502408 | `9826e9ecf8ed543a6dc78e3731102e0f` | 相同 |
| `entry.cgi` | 1057168 | `75a693c87c317a49c37c4dddb6b9ac7a` | 相同 |
| `sdk/lib/librecamera_ext.so.1.0.0` | 89496 | `5cebfb9e4d9c001c45b58c75daafe934` | 相同 |

### packages/（应用商店，`catalog.json` 引用）

9 个应用包与 v1.4.0 **逐字节相同**（本版从 HEAD 重建后 md5 全部一致）：

| 包 | size (bytes) | md5 |
|----|-------------:|-----|
| `face-analysis-0.1.0-arm64.tar.gz` | 52838389 | `d8ed87ded55bcae3fadb12fb7d838590` |
| `facemesh-reader-0.1.0-arm64.tar.gz` | 6843123 | `a9a957e67033c62549cc36bccd9fd387` |
| `fall-detection-0.2.0-arm64.tar.gz` | 3053510 | `1671bc9f53e8154545f756154c18c417` |
| `fitness-trainer-0.1.0-arm64.tar.gz` | 2867151 | `43479adcf866449c88c2656f621a5d24` |
| `ppocr-reader-0.1.0-arm64.tar.gz` | 5194719 | `d0314b34b6e8f97b143bfa15e2718a32` |
| `qrcode-reader-0.1.0-arm64.tar.gz` | 922415 | `38ee1e4eb2086767614c3500bdef4ce0` |
| `retail-vision-0.1.0-arm64.tar.gz` | 3023387 | `f16c23f30d32455744412e0eed32097e` |
| `voice-transcribe-0.1.0-arm64.tar.gz` | 8158 | `cb31688b39241dc09dcb07f92e53fbc2` |
| `yolo-detector-0.1.0-arm64.tar.gz` | 3018913 | `1470e1cc06b1a4eb3e09f232ed1b76bb` |
| `voice-runtime-1.0.0.tar.gz` | 18856604 | `ace48a688d41a3fc6b852a0f14ddad8d` |
| `gst-hwcodec-1.0.0.tar.gz` | 425137 | `8e6d286fac58a5b366e8fdd1709b212f` |

每个应用包旁有同名 `.tar.gz.sig`（ECDSA P-256 / SHA-256 detached，base64，97 B）。
设备侧用内置公钥 `market/appmgr/keys/release_pub.pem` 验签，**未签名的包会被拒装**。
`catalog.json` 中每个包的 `signature` 字段即该 sidecar 内容。

两个运行时的 sha256（`catalog.json` 的 `runtimes.*.sha256`）：

| 运行时 | sha256 |
|--------|--------|
| `runtimes.audio` | `e1bccfc4f42f43478186d17119a20c4d7f0834640bf9bc324ed5d028e397f711` |
| `runtimes.hwcodec` | `ec9e0eb0286bb78740fd45ad1c9c8333f6f2621cb660154852039efadb9ddddc` |
